Subimos todo el código a la rama de desarrollo

--- a/README
+++ b/README
@@ -16,3 +16,5 @@ git branch
 git add .
 git commit -m "Esto es un cambio en la rama de desarrollo"
 
+# Si quiero unir todos los cambios de la rama de desarrollo a la rama master.
+git merge desarrollo
